feat: added projects controller feat: added isAdmin middleware
