# openapi.json
@@ -71,6 +71,15 @@
           }
         }
       },
+      "projectDetails": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/project"
+            }
+          }
+        }
+      },
       "sprintDetails": {
         "content": {
           "application/json": {
@@ -298,6 +307,78 @@
                 "success": {
                   "type": "boolean",
                   "example": false
+                }
+              }
+            }
+          }
+        }
+      },
+      "projectList": {
+        "description": "Ok",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "statusCode": {
+                  "type": "integer",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "success": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "allOf": [
+                      {
+                        "$ref": "#/components/schemas/project"
+                      },
+                      {
+                        "$ref": "#/components/schemas/default"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "projectDetails": {
+        "description": "Ok",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "statusCode": {
+                  "type": "integer",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "success": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "object",
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/project"
+                    },
+                    {
+                      "$ref": "#/components/schemas/default"
+                    }
+                  ]
                 }
               }
             }
@@ -572,6 +653,19 @@
           "updated_at": {
             "type": "string",
             "example": "2024-08-21T19:13:08.440Z"
+          }
+        }
+      },
+      "project": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "Project name"
+          },
+          "status": {
+            "type": "boolean",
+            "example": true
           }
         }
       },
@@ -861,6 +955,141 @@
             "name": "id",
             "in": "path",
             "description": "ID of backlog to delte",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ]
+      }
+    },
+    "/projects": {
+      "get": {
+        "tags": [
+          "Project"
+        ],
+        "summary": "List all Projects",
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/projectList"
+          },
+          "404": {
+            "$ref": "#/components/responses/notFound"
+          },
+          "500": {
+            "$ref": "#/components/responses/internalServerError"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Project"
+        ],
+        "summary": "Create new Project",
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/projectDetails"
+          },
+          "404": {
+            "$ref": "#/components/responses/notFound"
+          },
+          "500": {
+            "$ref": "#/components/responses/internalServerError"
+          }
+        },
+        "requestBody": {
+          "description": "Create a new Project",
+          "$ref": "#/components/requestBodies/projectDetails",
+          "required": true
+        }
+      }
+    },
+    "/projects/{id}": {
+      "get": {
+        "tags": [
+          "Project"
+        ],
+        "summary": "Show Project Details",
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/projectDetails"
+          },
+          "404": {
+            "$ref": "#/components/responses/notFound"
+          },
+          "500": {
+            "$ref": "#/components/responses/internalServerError"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of Project to return",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ]
+      },
+      "patch": {
+        "tags": [
+          "Project"
+        ],
+        "summary": "Edit Project Details",
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/projectDetails"
+          },
+          "404": {
+            "$ref": "#/components/responses/notFound"
+          },
+          "500": {
+            "$ref": "#/components/responses/internalServerError"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of Project to return",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Create a new Project",
+          "$ref": "#/components/requestBodies/projectDetails",
+          "required": true
+        }
+      },
+      "delete": {
+        "tags": [
+          "Project"
+        ],
+        "summary": "Delete Project Details",
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/projectDetails"
+          },
+          "404": {
+            "$ref": "#/components/responses/notFound"
+          },
+          "500": {
+            "$ref": "#/components/responses/internalServerError"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of Project to delte",
             "required": true,
             "schema": {
               "type": "integer",
